# BrilliantCMake

./: .clang-format  .clang-tidy  .project-config.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/actions/: install-gtest.bat  install-gtest.yml  intall-gtest.sh
.github/actions/build-project/: action.yml
.github/actions/config-cmake/: action.yml
.github/actions/install-gtest/: action.yml  install-gtest.bat  install-gtest.sh
.github/actions/install-libc++/: action.yml  build-with-msan.sh
.github/actions/make-coverage-badge/: action.yml  make-coverage-badge.py  requirements.txt
.github/actions/parse-coverage/: action.yml  make-shield-url.py  parse-coverage.py  parse-stat.py  requirements.txt  stats.py
.github/actions/project-constants/: action.yml
.github/actions/run-clang-tidy/: action.yml
.github/badges/: colors.json  coverage.json  cppcheck.json  doxygen.json
.github/workflows/: asan.yml  clang-format-check.yml  clang-tidy-check.yml  cmake-format-check.yml  cmake-multi-platform.yml  coverage.yml  cppcheck.yml  doxygen.yml  msan.yml  sanitizer.yml  tsan.yml
cmake/: CompilerOptions.cmake  MsvcRuntime.cmake  Options.cmake  SanitizerOptions.cmake
docs/: CMakeLists.txt  Doxyfile
include/project/: CMakeLists.txt  project.hpp
src/: CMakeLists.txt  project.cpp
test/: CMakeLists.txt  test.cpp
